fix mobile page being too big and rebuild project

--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -13,7 +13,6 @@
     background-image: linear-gradient(120deg, rgba(123,213,245,1) 20%, rgb(91, 99, 236) 40%, rgba(74,222,222,1) 60%, rgba(0,0,0,1) 80%, rgba(31,47,152,1) 100%);  
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100vw;
 }
 
 #about-me-body {
@@ -153,10 +152,6 @@ main {
     filter: invert(91%) sepia(16%) saturate(19%) hue-rotate(29deg) brightness(106%) contrast(102%);
 }
 
-#project-github {
-    
-}
-
 #github-icon {
     width: 24px;
     filter: invert(91%) sepia(16%) saturate(19%) hue-rotate(29deg) brightness(106%) contrast(102%);
@@ -198,7 +193,7 @@ footer {
     align-items: center;
 }
 #github-link > img {
-    height: 80%;
-    width: auto;
+    height: 40px;
+    width: 40px;
     filter: invert(91%) sepia(16%) saturate(19%) hue-rotate(29deg) brightness(106%) contrast(102%);
 }
